1.0
    1.0 will be a complete api overhaul

0.10.3rc (unreleased)
	updated docs on bad data
	black formatting

0.10.2
	added some docs on encoding

0.10.1
	clarifying some inline docs
	BREAKING CHANGE: `fetch_url` now returns a tuple of `(html, encoding)
	now tracking in ParsedResult: encoding
		ParsedResult.metadata['_internal']['encoding'] = resp.encoding.lower() if resp.encoding else None
	`.parse` now accepts `html_encoding`
	refactored url fetching to use context managers 
	refactored url fetching to only insert our hooks when needed
	adjusted test harness to close socket connections

0.10.0
	better Python3 support by using the six library

0.9.23
	added tests for url entities
	better grabbing of the charset
	better grabbing of some edge cases

0.9.22
	removed internal calls to the deprecated `get_metadata`, replacing them with `get_metadatas`.
	this will avoid emitting a deprecation warning, allowing users to migrate more easily

0.9.21
	* requests_toolbelt is now required
	** this is to solve PR#16 / Issue#21
	** the toolbelt and built-in versions of get_encodings_from_content required different workarounds
	* the output of urlparse is now cached onto the parser instance.
	** perhaps this will be global cache in the future
	* MetadataParser now accepts `cached_urlparser`
	** default: True
	   options: True: use a instance of UrlParserCacheable(maxitems=30)
			  : INT: use a instance of UrlParserCacheable(maxitems=cached_urlparser)
			  : None/False/0 - use native urlparse
			  : other truthy values - use as a custom urlparse

	* addressing issue #17 (https://github.com/jvanasco/metadata_parser/issues/17) where `get_link_` logic does not handle schemeless urls.
	** `MetadataParser.get_metadata_link` will now try to upgrade schemeless links (e.g. urls that start with "//")
	** `MetadataParser.get_metadata_link` will now check values against `FIELDS_REQUIRE_HTTPS` in certain situations to see if the value is valid for http