@@ -5,7 +5,7 @@ import os, re
 with open(
     os.path.join(os.path.dirname(__file__), "metadata_parser", "__init__.py")
 ) as v_file:
-    VERSION = re.compile(r".*__VERSION__ = '(.*?)'", re.S).match(v_file.read()).group(1)
+    VERSION = re.compile(r'.*__VERSION__ = "(.*?)"', re.S).match(v_file.read()).group(1)
 
 # go
 setup(
